# AgentKernel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md  Shuttle.toml  build.sh  check_tags.js  deploy-demo.sh  fix.py  fly.toml
.github/workflows/: deploy-pages.yml
crates/core-context/: Cargo.toml
crates/core-context/src/: lib.rs
crates/core-events/: Cargo.toml
crates/core-events/src/: lib.rs
crates/core-export/: Cargo.toml
crates/core-export/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: claude.rs  lib.rs  openai.rs  trace.rs
crates/core-protocol/: Cargo.toml
crates/core-protocol/src/: lib.rs
crates/core-runtime/: Cargo.toml
crates/core-runtime/examples/: chat.rs
crates/core-runtime/src/: lib.rs
crates/core-session/: Cargo.toml
crates/core-session/src/: lib.rs
crates/core-storage/: Cargo.toml
crates/core-storage/src/: lib.rs
crates/core-tool/: Cargo.toml
crates/core-tool/src/: lib.rs
crates/core-trace/: Cargo.toml
crates/core-trace/src/: lib.rs
crates/core-ws/: Cargo.toml
crates/core-ws/src/: lib.rs  server.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  shuttle.rs
examples/: test_scaffold.go  test_scaffold.py  test_scaffold.rs
skill/: API.md  INTEGRATION-GUIDE.md  SKILL.md  TOOL_PROTOCOL.md  关于能力工具调用的判断方式.md  前端完整接入指南.md  前端通讯指南-消息与工具链.md  压缩上下文技巧.md  消息显示与工具链聚合技巧.md  通讯数据结构大全.md
web/: server.py
web/static/: index.html  script.js  style.css
