[package]
name = "core-storage"
version.workspace = true
edition.workspace = true

[dependencies]
core-protocol = { workspace = true }
core-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
