[package]
name = "core-tool"
version.workspace = true
edition.workspace = true

[dependencies]
core-protocol = { workspace = true }
core-events = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
