[package]
name = "core-trace"
version.workspace = true
edition.workspace = true

[dependencies]
core-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
