[package]
name = "agentkernel-server"
version.workspace = true
edition.workspace = true
description = "AgentKernel WS Server"

[[bin]]
name = "agentkernel"
path = "src/main.rs"

[dependencies]
core-protocol = { workspace = true }
core-runtime = { workspace = true }
core-storage = { workspace = true }
core-ws = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
