[package]
name = "agentkernel-server"
version.workspace = true
edition.workspace = true
description = "AgentKernel WS Server"
default-run = "agentkernel"

[[bin]]
name = "agentkernel"
path = "src/main.rs"

[[bin]]
name = "agentkernel-shuttle"
path = "src/shuttle.rs"

[dependencies]
core-protocol = { workspace = true }
core-runtime = { workspace = true }
core-storage = { workspace = true }
core-ws = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Shuttle
shuttle-runtime = "0.57"
shuttle-axum = "0.57"
